Make automation asymmetry its own definition section

--- a/index.html
+++ b/index.html
@@ -632,9 +632,6 @@ private and public liberties. What's more, automation and the increasing compute
 of our lives both increase the power of information and decrease the cost of a number of intrusive
 behaviours that would be more easily kept in check if the perpetrator had to be in the same room as
 the victim.
-* When an [=actor=] can collect [=data=] about a [=person=] and process it automatically, and that
-[=person=] has to take manual action to protect their [=data=] or control its processing, this <dfn>automation asymmetry</dfn>
-creates an imbalance of power that favors that [=actor=] and decreases the [=person=]'s agency.
 This document focuses on the impact that [=data=] [=processing=] can have on people, but it can also
 impact other [=actors=], such as companies or governments.
 * It is important to keep in mind that not all people are equal in how they can resist
@@ -1636,6 +1633,12 @@ which could include friends, family members, teachers, strangers, or government 
 threats to privacy, including both disclosure and harassment, may be particular to the other
 people involved in the information flow ([[RFC6973]]).
 
+## Automation assymmetry
+
+When an [=actor=] can collect [=data=] about a [=person=] and process it automatically, and that
+[=person=] has to take manual action to protect their [=data=] or control its processing, this <dfn>automation asymmetry</dfn>
+creates an imbalance of power that favors that [=actor=] and decreases the [=person=]'s agency.
+
 ## Data governance
 
 <dfn data-lt="governance">Data governance</dfn> is the system of principles that regulate [=information flows=].
@@ -2358,7 +2361,7 @@ the success of advertising campaigns. Even this small amount of information is s
 
 </aside>
 
-  
+
 </section>
 
 <section class="appendix" id="bp-summary"></section>
