Automation asymmetry: simpler language

--- a/index.html
+++ b/index.html
@@ -1635,9 +1635,9 @@ people involved in the information flow ([[RFC6973]]).
 
 ## Automation assymmetry
 
-When an [=actor=] can collect [=data=] about a [=person=] and process it automatically, and that
-[=person=] has to take manual action to protect their [=data=] or control its processing, this <dfn>automation asymmetry</dfn>
-creates an imbalance of power that favors that [=actor=] and decreases the [=person=]'s agency.
+<dfn>Automation asymmetry</dfn> is when an [=actor=] can collect [=data=] about a [=person=] and process it automatically, and the
+[=person=] must take manual action to protect their [=data=] or control its processing. This 
+creates an imbalance of power in favors of the [=actor=] and decreases the [=person=]'s agency.
 
 ## Data governance
 
