--- a/index.html
+++ b/index.html
@@ -1658,6 +1658,137 @@ which could include friends, family members, coworkers, teachers, strangers, or 
 Some threats to privacy depend on which other
 people are involved in the information flow ([[RFC6973]]).
 
+## People {#people}
+
+A <dfn data-lt="individual|people|user|data subject">person</dfn> (also [=user=] or
+[=data subject=]) is any natural person. Throughout this document, we primarily use [=person=] or
+[=people=] to refer to human beings, as a reminder of their humanity. When we use the term [=user=],
+it is to talk about the specific [=person=] who happens to be using a given system at that time.
+
+A <dfn data-lt="vulnerable">vulnerable person</dfn> in a particular [=context=]
+is a [=person=] whose ability to make their own choices can be taken away more
+easily than usual. Among other things, they should
+be treated with greater default privacy protections and may be considered unable to
+[=consent=] to various interactions with a system.
+People can be vulnerable for different reasons, and some people may
+be vulnerable in a specific [=context=]. For example, a child might
+be vulnerable in many contexts, but a person in a position of power imbalance
+with an employer or other [=actor=] might be vulnerable in the contexts
+where that actor is also present.  See [[[#vulnerability]]].
+
+## Actors {#actors}
+
+An <dfn>actor</dfn> is an entity that a [=person=] can reasonably understand as a single "thing"
+they're interacting with. [=Actors=] can be [=people=] or collective entities like companies,
+associations, or governmental bodies.
+
+The [=actor=] that makes or delegates decisions
+about the content and [=data processing=] on this [=origin=] or [=site=] is
+known as the web page's <dfn data-dfn-for="page">first party</dfn>. When a [=person=]
+interacts with a part of a web page, the <dfn>first party</dfn> of that interaction
+is usually the web page's [=page/first party=].
+However, if a different [=actor=] makes the decisions about how that part of the
+page works, and a reasonable person with a realistic amount of time and energy would realize
+that this other [=actor=] has this control, this other
+[=actor=] is the [=first party=] for the interaction instead.
+
+If someone captures data about an interaction with a web page,
+the [=first party=] of that interaction is accountable for the way that data is [=processed=],
+even if another [=actor=] does the processing.
+
+A <dfn data-lt="third parties">third party</dfn> is any [=actor=] other than the
+[=person=] visiting the website or the [=first parties=] they expect to be interacting
+with.
+
+## User Agents {#user-agents}
+
+A [=user agent=] acts as an intermediary between a [=person=] (its [=user=]) and the web.
+[=User agents=] implement, to the extent possible, the principles that collective governance
+establishes in favour of individuals. They seek to prevent the creation of asymmetries of
+information, and serve their [=user=] by providing them with automation to rectify
+[=automation asymmetries=]. Where possible, they protect their [=user=] from receiving
+intrusive messages.
+
+The [=user agent=] is expected to align fully with the [=person=] using it and to operate exclusively
+in that [=person=]'s interest. It is <em>not</em> the [=first party=]. The [=user agent=] serves the
+[=person=] as a <dfn>trustworthy agent</dfn>:
+it always puts that [=person=]'s interest first. In some occasions, this can mean protecting
+that [=person=] from themselves by preventing them from carrying out a dangerous decision,
+or by slowing down the person in their decision. For example, the
+[=user agent=] will make it difficult for someone to connect to a site if it can't verify
+that the site is authentic. It will check that that [=person=] really intends to expose a
+sensitive device to a page. It will prevent that [=person=] from consenting to the permanent
+monitoring of their behaviour. Its <dfn class="export">user agent duties</dfn> include
+([[?Taking-Trust-Seriously]]):
+
+<dl>
+  <dt><dfn class="export">Duty of Protection</dfn></dt>
+  <dd>
+    Protection requires [=user agents=] to actively protect their [=user=]'s data, beyond
+    simple security measures. It is insufficient to just encrypt at rest and in transit.
+    The [=user agent=] must also limit retention, help ensure that only strictly
+    necessary data is collected, and require guarantees from any [=actor=] that the user agent can
+    reasonably be aware that data is shared to.
+  </dd>
+  <dt><dfn class="export">Duty of Discretion</dfn></dt>
+  <dd>
+    Discretion requires the [=user agent=] to make best efforts to enforce
+    principles by taking care in the ways it discloses the [=personal data=]
+    that it manages. Discretion is not
+    confidentiality or secrecy: trust
+    can be preserved even when the [=user agent=] shares some [=personal data=], so long as
+    it is done in an [=appropriately=] discreet manner.
+  </dd>
+  <dt><dfn class="export">Duty of Honesty</dfn></dt>
+  <dd>
+    Honesty requires that the [=user agent=] give its [=user=]
+    information of which the [=user agent=] can reasonably be aware, that is relevant to
+    them and that will increase their
+    autonomy, as long as they can understand it and there's an appropriate
+    time to do so. This is almost never when the [=person=] is trying to do something else such as
+    read a page or activate a feature. The duty of honesty goes well beyond that of
+    transparency that is often included in older privacy regimes. Unlike transparency, honesty
+    can't hide relevant information in complex legal notices and it can't rely on
+    very short summaries provided in a consent dialog.
+    If the person has provided [=consent=] to [=processing=] of their [=personal data=],
+    the [=user agent=] should inform the [=person=] of ongoing [=processing=], with a
+    level of obviousness that is proportional to the reasonably foreseeable impact of the processing.
+  </dd>
+  <dt><dfn class="export">Duty of Loyalty</dfn></dt>
+  <dd>
+    Because the [=user agent=] is a [=trustworthy agent=], it is held to be loyal to the
+    [=person=] using it in all situations, including in preference to the [=user agent=]'s implementer.
+    When a [=user agent=] carries out [=processing=] that is detrimental to its [=user=]'s
+    interests and instead benefits another [=actor=], this is <dfn data-lt="disloyalty">disloyal</dfn>. Often this would benefit the
+    [=user agent=] itself, in which case it is known as "self-dealing". Behaviour can be [=disloyal=] even
+    if it is done at the same time as [=processing=] that is in the [=person=]'s interest, what matters is
+    that it potentially conflicts with that [=person=]'s interest. Additionally, it is important to keep in
+    mind that additional [=processing=] almost always implies additional risk. Therefore [=processing=]
+    that is not explicitly in a [=user=]'s interest is likely to be disloyal.
+    [=Disloyalty=] is always [=inappropriate=].
+  </dd>
+</dl>
+
+These duties ensure the [=user agent=] will <em>care</em> for its [=user=]. In academic
+research, this relationship with a [=trustworthy agent=] is often described as "fiduciary"
+([[?Fiduciary-Law]], [[?Fiduciary-Model]], [[?Taking-Trust-Seriously]];
+see [[?Fiduciary-UA]] for a longer informal discussion). Some jurisdictions may have a distinct
+legal meaning for "fiduciary." ([[?Fiduciary-Law]])
+
+Many of the principles described in the rest of this document extend the [=user agent=]'s duties and
+make them more precise.
+
+## Contexts {#context}
+
+A <dfn>context</dfn> is a physical or digital environment in which [=people=] interact with other
+[=actors=], and which the [=people=] understand as distinct from other [=contexts=].
+
+A [=context=] is not defined in terms of who owns or controls it. Sharing
+[=data=] between different [=contexts=] of one single [=actor=] can be
+a [=privacy violation=], just as if the same data were shared between unrelated [=actors=].
+
+
+
 ## Automation asymmetry
 
 <dfn>Automation asymmetry</dfn> is when an [=actor=] can collect [=data=] about a [=person=] and process it automatically, and the
@@ -1750,7 +1881,7 @@ bad actors, it creates one central point of failure, it is hard to meaningfully 
 for the scale of processing implied by web systems), and experience with existing systems
 shows that they make it hard for [=people=] to exercise their rights.
 
-### Privacy Labour {#privacy-labour}
+## Privacy Labour {#privacy-labour}
 
 <dfn data-lt="privacy labor|labour|labor">Privacy labour</dfn> when a [=person=] is required to do
 the work to make sure [=data processing=] of which they are the subject or recipient is
@@ -1758,13 +1889,13 @@ the work to make sure [=data processing=] of which they are the subject or recip
 Data systems that are based on asking [=people=] for their [=consent=] tend to increase
 [=privacy labour=].
 
-Compliance requirements based on the <dfn data-lt="FIPs">Fair Information Practices</dfn> ([=FIPs=])
+Compliance requirements based on the Fair Information Practices (FIPs)
 often increase [=privacy labour=] as they
 do not forbid specific types of [=data processing=]
 and assume perfect, unlimited [=autonomy=].
 The volume of [=data processing=] taking place is now
-much higher than when the [=FIPS=] were written,
-so this approach is no longer [=appropriate=]
+much higher than when the FIPS were written,
+so this approach is no longer [=appropriate=]. <!-- TODO: citation needed -->
 
 ## Vulnerability {#vulnerability}
 
@@ -1928,135 +2059,13 @@ Such transparency can only function if there are strong rights of access to data
 derived from one's personal data) as well as mechanisms to explain the outcomes of automated
 decisions.
 
-## User Agents {#user-agents}
 
-A [=user agent=] acts as an intermediary between a [=person=] (its [=user=]) and the web.
-[=User agents=] implement, to the extent possible, the principles that collective governance
-establishes in favour of individuals. They seek to prevent the creation of asymmetries of
-information, and serve their [=user=] by providing them with automation to rectify
-[=automation asymmetries=]. Where possible, they protect their [=user=] from receiving
-intrusive messages.
 
-The [=user agent=] is expected to align fully with the [=person=] using it and to operate exclusively
-in that [=person=]'s interest. It is <em>not</em> the [=first party=]. The [=user agent=] serves the
-[=person=] as a <dfn>trustworthy agent</dfn>:
-it always puts that [=person=]'s interest first. In some occasions, this can mean protecting
-that [=person=] from themselves by preventing them from carrying out a dangerous decision,
-or by slowing down the person in their decision. For example, the
-[=user agent=] will make it difficult for someone to connect to a site if it can't verify
-that the site is authentic. It will check that that [=person=] really intends to expose a
-sensitive device to a page. It will prevent that [=person=] from consenting to the permanent
-monitoring of their behaviour. Its <dfn class="export">user agent duties</dfn> include
-([[?Taking-Trust-Seriously]]):
 
-<dl>
-  <dt><dfn class="export">Duty of Protection</dfn></dt>
-  <dd>
-    Protection requires [=user agents=] to actively protect their [=user=]'s data, beyond
-    simple security measures. It is insufficient to just encrypt at rest and in transit.
-    The [=user agent=] must also limit retention, help ensure that only strictly
-    necessary data is collected, and require guarantees from any [=actor=] that the user agent can
-    reasonably be aware that data is shared to.
-  </dd>
-  <dt><dfn class="export">Duty of Discretion</dfn></dt>
-  <dd>
-    Discretion requires the [=user agent=] to make best efforts to enforce
-    principles by taking care in the ways it discloses the [=personal data=]
-    that it manages. Discretion is not
-    confidentiality or secrecy: trust
-    can be preserved even when the [=user agent=] shares some [=personal data=], so long as
-    it is done in an [=appropriately=] discreet manner.
-  </dd>
-  <dt><dfn class="export">Duty of Honesty</dfn></dt>
-  <dd>
-    Honesty requires that the [=user agent=] give its [=user=]
-    information of which the [=user agent=] can reasonably be aware, that is relevant to
-    them and that will increase their
-    autonomy, as long as they can understand it and there's an appropriate
-    time to do so. This is almost never when the [=person=] is trying to do something else such as
-    read a page or activate a feature. The duty of honesty goes well beyond that of
-    transparency that is often included in older privacy regimes. Unlike transparency, honesty
-    can't hide relevant information in complex legal notices and it can't rely on
-    very short summaries provided in a consent dialog.
-    If the person has provided [=consent=] to [=processing=] of their [=personal data=],
-    the [=user agent=] should inform the [=person=] of ongoing [=processing=], with a
-    level of obviousness that is proportional to the reasonably foreseeable impact of the processing.
-  </dd>
-  <dt><dfn class="export">Duty of Loyalty</dfn></dt>
-  <dd>
-    Because the [=user agent=] is a [=trustworthy agent=], it is held to be loyal to the
-    [=person=] using it in all situations, including in preference to the [=user agent=]'s implementer.
-    When a [=user agent=] carries out [=processing=] that is detrimental to its [=user=]'s
-    interests and instead benefits another [=actor=], this is <dfn data-lt="disloyalty">disloyal</dfn>. Often this would benefit the
-    [=user agent=] itself, in which case it is known as "self-dealing". Behaviour can be [=disloyal=] even
-    if it is done at the same time as [=processing=] that is in the [=person=]'s interest, what matters is
-    that it potentially conflicts with that [=person=]'s interest. Additionally, it is important to keep in
-    mind that additional [=processing=] almost always implies additional risk. Therefore [=processing=]
-    that is not explicitly in a [=user=]'s interest is likely to be disloyal.
-    [=Disloyalty=] is always [=inappropriate=].
-  </dd>
-</dl>
 
-These duties ensure the [=user agent=] will <em>care</em> for its [=user=]. In academic
-research, this relationship with a [=trustworthy agent=] is often described as "fiduciary"
-([[?Fiduciary-Law]], [[?Fiduciary-Model]], [[?Taking-Trust-Seriously]];
-see [[?Fiduciary-UA]] for a longer informal discussion). Some jurisdictions may have a distinct
-legal meaning for "fiduciary." ([[?Fiduciary-Law]])
 
-Many of the principles described in the rest of this document extend the [=user agent=]'s duties and
-make them more precise.
 
-## People {#people}
 
-A <dfn data-lt="individual|people|user|data subject">person</dfn> (also [=user=] or
-[=data subject=]) is any natural person. Throughout this document, we primarily use [=person=] or
-[=people=] to refer to human beings, as a reminder of their humanity. When we use the term [=user=],
-it is to talk about the specific [=person=] who happens to be using a given system at that time.
-
-A <dfn data-lt="vulnerable">vulnerable person</dfn> in a particular [=context=]
-is a [=person=] whose ability to make their own choices can be taken away more
-easily than usual. Among other things, they should
-be treated with greater default privacy protections and may be considered unable to
-[=consent=] to various interactions with a system.
-People can be vulnerable for different reasons, and some people may
-be vulnerable in a specific [=context=]. For example, a child might
-be vulnerable in many contexts, but a person in a position of power imbalance
-with an employer or other [=actor=] might be vulnerable in the contexts
-where that actor is also present.  See [[[#vulnerability]]].
-
-## Contexts {#context}
-
-A <dfn>context</dfn> is a physical or digital environment in which [=people=] interact with other
-[=actors=], and which the [=people=] understand as distinct from other [=contexts=].
-
-A [=context=] is not defined in terms of who owns or controls it. Sharing
-[=data=] between different [=contexts=] of a single company can be
-a [=privacy violation=], just as if the same data were shared between unrelated [=actors=].
-
-## Server-Side Actors {#parties}
-
-An <dfn>actor</dfn> is an entity that a [=person=] can reasonably understand as a single "thing"
-they're interacting with. [=Actors=] can be [=people=] or collective entities like companies,
-associations, or governmental bodies.
-
-[=User agents=] tend to explain to [=people=] which [=origin=] or [=site=] provided the
-web page they're looking at. The [=actor=] that makes or delegates decisions
-about the content and [=data processing=] on this [=origin=] or [=site=] is
-known as the web page's <dfn data-dfn-for="page">first party</dfn>. When a [=person=]
-interacts with a part of a web page, the <dfn>first party</dfn> of that interaction
-is usually the web page's [=page/first party=].
-However, if a different [=actor=] makes the decisions about how that part of the
-page works, and a reasonable person with a realistic amount of time and energy would realize
-that this other [=actor=] has this control, this other
-[=actor=] is the [=first party=] for the interaction instead.
-
-If someone captures data about an interaction with a web page,
-the [=first party=] of that interaction is accountable for the way that data is [=processed=],
-even if another [=actor=] does the processing.
-
-A <dfn data-lt="third parties">third party</dfn> is any [=actor=] other than the
-[=person=] visiting the website or the [=first parties=] they expect to be interacting
-with.
 
 ## Acting on Data {#acting-on-data}
 
