--- a/index.html
+++ b/index.html
@@ -676,6 +676,14 @@ which one [=actor=] may coerce other [=actors=] into facilitating its [=inapprop
 practices, as is often the case with dominant players in advertising or in content aggregation
 ([[?Consent-Lackeys]], [[?CAT]]).
 
+[=People=] have <dfn>privacy</dfn> in a given [=context=] when [=actors=] in
+that [=context=] follow that [=context=]'s principles when presenting
+information and using [=personal data=].
+When the principles for that [=context=] are not followed, there is a
+<dfn>privacy violation</dfn>. We say that a particular interaction is
+<dfn data-lt="appropriately">appropriate</dfn> when the principles are followed
+or <dfn data-lt="inappropriately">inappropriate</dfn> otherwise.
+
 # Principles for Privacy on the Web
 
 This section describes a set of principles designed to apply to the web
@@ -2067,9 +2075,9 @@ decisions.
 
 
 
-## Acting on Data {#acting-on-data}
+## Personal data {#personal-data}
 
-We define <dfn data-lt="data">personal data</dfn> as any information that is directly or
+<dfn data-lt="data">Personal data</dfn> is any information that is directly or
 indirectly related to an identified or identifiable [=person=], such as by reference to an
 [=identifier=] ([[GDPR]], [[OECD-Guidelines]], [[Convention-108]]).
 
@@ -2098,13 +2106,7 @@ Examples of [=identifiers=] for a [=person=] can be:
 If a [=person=] could reasonably be identified or re-identified through the combination of [=data=] with other
 [=data=], then both sets of [=data=] are [=personal data=].
 
-[=People=] have <dfn>privacy</dfn> in a given [=context=] when [=actors=] in
-that [=context=] follow that [=context=]'s principles when presenting
-information and using [=personal data=].
-When the principles for that [=context=] are not followed, there is a
-<dfn>privacy violation</dfn>. We say that a particular interaction is
-<dfn data-lt="appropriately">appropriate</dfn> when the principles are followed
-or <dfn data-lt="inappropriately">inappropriate</dfn> otherwise.
+## Data processing {#data-processing}
 
 An [=actor=] <dfn data-lt="process|processing|processed|data processing">processes</dfn> data if it
 carries out operations on [=personal data=], whether or not by automated means, such as
