--- a/index.html
+++ b/index.html
@@ -1890,6 +1890,103 @@ A <dfn data-lt="data processor">service provider</dfn> or [=data processor=]:
   monitoring service integrity, load balancing, capacity planning, or billing); and,
 * has a contract in place with the [=actor=] which is consistent with the above limitations.
 
+## Recognition {#recognition}
+
+<dfn data-lt="recognize|recognized">Recognition</dfn> is the act of realising that a given [=identity=]
+corresponds to the same [=person=] as another [=identity=] which may have been
+observed either in another [=context=], or in the same [=context=] but at a
+different time. [=Recognition=] can be probabilistic, if someone realises there's
+a high probability that two [=identities=] correspond to the same [=person=],
+even if they aren't certain.
+
+A [=person=] can be [=recognized=] whether or not their legal identity or
+characteristics of their legal identity are included in the recognition.
+
+There are several types of [=recognition=] that may take place, and these types
+overlap: [=cross-site recognition=] is usually
+[=cross-context recognition=] (and always [=recognizes=] across [=partitions=]); and
+[=same-site recognition=] is sometimes [=cross-context recognition=] (and may or may not involve multiple [=partitions=]).
+
+### Cross-context recognition {#cross-context-recognition}
+
+<dfn>Cross-context recognition</dfn> is [=recognition=] between different
+[=contexts=].
+
+[=Cross-context recognition=] is only [=appropriate=] when the person being [=recognized=]
+can reasonably expect recognition to happen, and can control whether it does.
+
+If a person uses a piece of identifying information in two different
+contexts (e.g. their email or phone number), this *does not* automatically
+mean that they intend to use the same identity in both contexts. It is
+[=inappropriate=] to [=recognize=] them using that information, unless there's
+some other indication that they intended to use a single identity. It is also
+[=inappropriate=] to seek extra identifying information to help with
+cross-context recognition.
+
+Systems which [=recognize=] people across [=contexts=] need
+to be careful not to apply the principles of one [=context=] in ways that
+violate the principles around use of information acquired in a different
+[=context=]. This is particularly true for [=vulnerable people=], as
+recognising them in different [=contexts=] may force traits into the open
+that reveal their vulnerability. For example, if you meet your therapist at a
+party, you expect them to have different discussion topics with you than they
+usually would, and possibly even to pretend they don't know you.
+
+### Cross-site recognition {#cross-site-recognition}
+
+<dfn>Cross-site recognition</dfn> is [=recognition=] when the identities
+are observed on different [=sites=]. In the usual case that the sites are
+different [=contexts=],
+[=cross-site recognition=] is [=inappropriate=] in the same cases as [=cross-context recognition=].
+
+### Same-site recognition {#same-site-recognition}
+
+<dfn>Same-site recognition</dfn> is when a single [=site=] [=recognizes=] a
+[=person=] across two or more visits.
+
+A privacy harm occurs if a [=person=] reasonably expects that they'll be using
+a different [=identity=] for different visits to a single site, but the site
+[=recognizes=] them anyway.
+
+### User agent partitions {#user-agent-partitions}
+
+A <dfn>partition</dfn> is the [=user agent=]'s attempt to match how its user
+would understand a [=context=]. [=User agents=] don't have a perfect
+understanding of how their users experience the sites they visit, so they
+often need to approximate the boundaries between [=contexts=] when building
+[=partitions=].
+
+In the absence of better information, a [=partition=] can be defined as:
+
+* a set of [=environments=] (roughly: same-site and cross-site [^iframe^]s,
+workers, and top-level pages)
+* whose [=environment/top-level origins=] are in the [=same site=] (note: see
+[[PSL-Problems]])
+* being visited within the same user agent installation (and browser profile,
+container, or container tab for user agents that support those features)
+* between points in time that the person or user agent clears that [=site=]'s
+cookies and other storage (which is sometimes automatic at the end of each
+session).
+
+It can be difficult for a [=user agent=] to detect when a single site contains
+multiple [=contexts=]. When a [=user agent=] can detect this, it should adjust
+its [=partitions=] accordingly, for instance by partitioning identities
+per subdomain or site path. User agents should work to improve their ability to
+distinguish contexts within a site.
+
+[=User agents=] should prevent people from being
+[=recognized=] across [=partitions=] unless they intend to be
+recognized.
+
+Note that sites can do harm even if they can't be completely certain
+that visits come from the same person, so [=user agents=] should also take steps
+to prevent such probabilistic recognition. The [[[Privacy-Threat]]] discusses
+the tradeoffs involved ([[Privacy-Threat]]).
+
+If a [=user agent=] can tell that its user is using a particular identity on a
+website, it should make that active identity clear to the user (e.g. if the
+user logged into the site via an API like [[[credential-management-1]]]).
+
 ## Individual Autonomy {#autonomy}
 
 A [=person=]'s <dfn data-lt="autonomous">autonomy</dfn> is their ability to make decisions of their own personal will,
@@ -2136,111 +2233,6 @@ to ensure that "<i>broad testing and audit continues to be possible</i>" where
 Such transparency can only function if there are strong rights of access to data (including data
 derived from one's personal data) as well as mechanisms to explain the outcomes of automated
 decisions.
-
-
-
-
-
-
-
-
-
-
-
-## Recognition {#recognition}
-
-<dfn data-lt="recognize|recognized">Recognition</dfn> is the act of realising that a given [=identity=]
-corresponds to the same [=person=] as another [=identity=] which may have been
-observed either in another [=context=], or in the same [=context=] but at a
-different time. [=Recognition=] can be probabilistic, if someone realises there's
-a high probability that two [=identities=] correspond to the same [=person=],
-even if they aren't certain.
-
-A [=person=] can be [=recognized=] whether or not their legal identity or
-characteristics of their legal identity are included in the recognition.
-
-### Recognition Types {#recognition-types}
-
-There are several types of [=recognition=] that may take place.
-
-<dfn>Cross-context recognition</dfn> is [=recognition=] between different
-[=contexts=].
-
-[=Cross-context recognition=] is only [=appropriate=] when the person being [=recognized=]
-can reasonably expect recognition to happen, and can control whether it does.
-
-If a person uses a piece of identifying information in two different
-contexts (e.g. their email or phone number), this *does not* automatically
-mean that they intend to use the same identity in both contexts. It is
-[=inappropriate=] to [=recognize=] them using that information, unless there's
-some other indication that they intended to use a single identity. It is also
-[=inappropriate=] to seek extra identifying information to help with
-cross-context recognition.
-
-Systems which [=recognize=] people across [=contexts=] need
-to be careful not to apply the principles of one [=context=] in ways that
-violate the principles around use of information acquired in a different
-[=context=]. This is particularly true for [=vulnerable people=], as
-recognising them in different [=contexts=] may force traits into the open
-that reveal their vulnerability. For example, if you meet your therapist at a
-party, you expect them to have different discussion topics with you than they
-usually would, and possibly even to pretend they don't know you.
-
-<dfn>Cross-site recognition</dfn> is [=recognition=] when the identities
-are observed on different [=sites=]. In the usual case that the sites are
-different [=contexts=],
-[=cross-site recognition=] is [=inappropriate=] in the same cases as [=cross-context recognition=].
-
-<dfn>Same-site recognition</dfn> is when a single [=site=] [=recognizes=] a
-[=person=] across two or more visits.
-
-A privacy harm occurs if a [=person=] reasonably expects that they'll be using
-a different [=identity=] for different visits to a single site, but the site
-[=recognizes=] them anyway.
-
-Note that these categories overlap: [=cross-site recognition=] is usually
-[=cross-context recognition=] (and always [=recognizes=] across [=partitions=]); and
-[=same-site recognition=] is sometimes [=cross-context recognition=] (and may or may not
-involve multiple [=partitions=]).
-
-### User agent awareness of recognition {#user-agent-recognition}
-
-A <dfn>partition</dfn> is the [=user agent=]'s attempt to match how its user
-would understand a [=context=]. [=User agents=] don't have a perfect
-understanding of how their users experience the sites they visit, so they
-often need to approximate the boundaries between [=contexts=] when building
-[=partitions=].
-
-In the absence of better information, a [=partition=] can be defined as:
-
-* a set of [=environments=] (roughly: same-site and cross-site [^iframe^]s,
-workers, and top-level pages)
-* whose [=environment/top-level origins=] are in the [=same site=] (note: see
-[[PSL-Problems]])
-* being visited within the same user agent installation (and browser profile,
-container, or container tab for user agents that support those features)
-* between points in time that the person or user agent clears that [=site=]'s
-cookies and other storage (which is sometimes automatic at the end of each
-session).
-
-It can be difficult for a [=user agent=] to detect when a single site contains
-multiple [=contexts=]. When a [=user agent=] can detect this, it should adjust
-its [=partitions=] accordingly, for instance by partitioning identities
-per subdomain or site path. User agents should work to improve their ability to
-distinguish contexts within a site.
-
-[=User agents=] should prevent people from being
-[=recognized=] across [=partitions=] unless they intend to be
-recognized.
-
-Note that sites can do harm even if they can't be completely certain
-that visits come from the same person, so [=user agents=] should also take steps
-to prevent such probabilistic recognition. The [[[Privacy-Threat]]] discusses
-the tradeoffs involved ([[Privacy-Threat]]).
-
-If a [=user agent=] can tell that its user is using a particular identity on a
-website, it should make that active identity clear to the user (e.g. if the
-user logged into the site via an API like [[[credential-management-1]]]).
 
 </section>
 
