Privacy labour: move earlier

--- a/index.html
+++ b/index.html
@@ -1799,7 +1799,21 @@ A [=context=] is not defined in terms of who owns or controls it. Sharing
 [=data=] between different [=contexts=] of one single [=actor=] can be
 a [=privacy violation=], just as if the same data were shared between unrelated [=actors=].
 
+## Privacy Labour {#privacy-labour}
 
+<dfn data-lt="privacy labor|labour|labor">Privacy labour</dfn> is when a [=person=] is required to do
+the work to make sure [=data processing=] of which they are the subject or recipient is
+[=appropriate=], instead of the [=actors=] who are doing the processing.
+Data systems that are based on asking [=people=] for their [=consent=] tend to increase
+[=privacy labour=].
+
+Compliance requirements based on the Fair Information Practices (FIPs)
+often increase [=privacy labour=] as they
+do not forbid specific types of [=data processing=]
+and assume perfect, unlimited [=autonomy=].
+The volume of [=data processing=] taking place is now
+much higher than when the FIPS were written,
+so this approach is no longer [=appropriate=]. <!-- TODO: citation needed -->
 
 ## Automation asymmetry
 
@@ -2063,22 +2077,6 @@ approach is not recommended, for multiple reasons: it offers no technical protec
 bad actors, it creates one central point of failure, it is hard to meaningfully audit (particularly
 for the scale of processing implied by web systems), and experience with existing systems
 shows that they make it hard for [=people=] to exercise their rights.
-
-## Privacy Labour {#privacy-labour}
-
-<dfn data-lt="privacy labor|labour|labor">Privacy labour</dfn> when a [=person=] is required to do
-the work to make sure [=data processing=] of which they are the subject or recipient is
-[=appropriate=], instead of the [=actors=] who are doing the processing.
-Data systems that are based on asking [=people=] for their [=consent=] tend to increase
-[=privacy labour=].
-
-Compliance requirements based on the Fair Information Practices (FIPs)
-often increase [=privacy labour=] as they
-do not forbid specific types of [=data processing=]
-and assume perfect, unlimited [=autonomy=].
-The volume of [=data processing=] taking place is now
-much higher than when the FIPS were written,
-so this approach is no longer [=appropriate=]. <!-- TODO: citation needed -->
 
 ## Vulnerability {#vulnerability}
 
